--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
+
         "@wdio/allure-reporter": "^7.16.11",
         "@wdio/cli": "^7.16.11",
         "@wdio/cucumber-framework": "^7.16.11",
@@ -11,12 +12,12 @@
         "chromedriver": "^96.0.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4",
-        "wdio-chromedriver-service": "^7.2.2",
-        "wdio-cucumber-reporter": "0.0.2"
+        "wdio-chromedriver-service": "^7.2.2"
     },
     "scripts": {
         "wdio": "wdio run wdio.conf.ts",
-        "test": "npx wdio wdio.conf.ts"
+        "test": "npx wdio wdio.conf.ts",
+        "report": "allure generate allure-results --clean && allure open"
     },
     "dependencies": {
         "allure": "0.0.0",
