--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@wdio/cli": "^7.16.11",
         "@wdio/cucumber-framework": "^7.16.11",
         "@wdio/local-runner": "^7.16.11",
+        "@wdio/selenium-standalone-service": "^7.16.11",
         "@wdio/spec-reporter": "^7.16.11",
         "chromedriver": "^96.0.0",
         "faker": "^5.5.3",
